# Bilibili-Reranger

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  vcpkg-configuration.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: debug.yml  docker.yml
api/: APIStatus.h  BilibiliInterface.cpp  BilibiliInterface.h  CMakeLists.txt  Util.h  bilibiliAPIs.h  config.h  interface.h  mainConfig.cpp  pluginInterface.cpp  pluginInterface.h  utils.cpp
api/ai/: CallAI.cpp  CallAI.h
api/bilibili_wbi/: wbi.cpp  wbi.h
plugins/ExamplePlugin/: CMakeLists.txt  interface.h  main.cpp  tasks.h
src/: Crawler.h  DataSaver.h  PluginHandler.h  PortListener.h  crawler.cpp  main.cpp  pluginHandler.cpp  portListener.cpp
src/develop/: flags.h
test/: DataForSubscriberVideos.json  DataFromBilibili.Json  SearchData.json
